@@ -6,55 +6,48 @@
 package org.rere.core.listener.utils;
 
 import java.lang.reflect.Type;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
 public class ClassUtils {
-    public static final Set<Class<?>> voidClasses = Set.of(Void.class, void.class);
-
-    public static final Set<Class<?>> primitiveClasses = Set.of(Integer.class,
-            Byte.class,
-            Character.class,
-            Boolean.class,
-            Double.class,
-            Float.class,
-            Long.class,
-            Short.class,
-            int.class,
-            byte.class,
-            char.class,
-            boolean.class,
-            double.class,
-            float.class,
-            long.class,
-            short.class);
-
-    public static final Map<Type, Type> wrapperMap = Map.of(int.class,
-            Integer.class,
-            byte.class,
-            Byte.class,
-            char.class,
-            Character.class,
-            boolean.class,
-            Boolean.class,
-            double.class,
-            Double.class,
-            float.class,
-            Float.class,
-            long.class,
-            Long.class,
-            short.class,
-            Short.class,
-            void.class,
-            Void.class);
-    private static final Set<Class<?>> wrappers = Set.of(Boolean.class,
+    public static final Map<Type, Type> wrapperMap = new HashMap<Type, Type>() {{
+        put(int.class, Integer.class);
+        put(byte.class, Byte.class);
+        put(char.class, Character.class);
+        put(boolean.class, Boolean.class);
+        put(double.class, Double.class);
+        put(float.class, Float.class);
+        put(long.class, Long.class);
+        put(short.class, Short.class);
+        put(void.class, Void.class);
+    }};
+    private static final Class<?> recordClass = initRecordClass();
+    private static final Set<Class<?>> wrappers = new HashSet<>(Arrays.asList(Boolean.class,
             Character.class,
             Byte.class,
             Short.class,
             Integer.class,
             Long.class,
             Float.class,
-            Double.class);
+            Double.class));
+
+    private static Class<?> initRecordClass() {
+        try {
+            return Class.forName("java.lang.Record");
+        } catch (ClassNotFoundException e) {
+            return null;
+        }
+    }
+
+    public static boolean isRecord(Class<?> clazz) {
+        if (recordClass == null) {
+            return false;
+        }
+        return recordClass.isAssignableFrom(clazz);
+    }
 
     public static Type getWrapped(Type clazz) {
         return wrapperMap.getOrDefault(clazz, clazz);
@@ -67,6 +60,7 @@ public class ClassUtils {
     public static boolean isString(Class<?> clazz) {
         return String.class.equals(clazz);
     }
+
     public static boolean isStringOrPrimitive(Class<?> clazz) {
         return String.class.equals(clazz) || isWrapperOrPrimitive(clazz);
     }
